--- a/MasterSignin/MasterSignin/MainWindow.xaml
+++ b/MasterSignin/MasterSignin/MainWindow.xaml
@@ -9,7 +9,16 @@
         WindowStyle="None"
         WindowState="Maximized"
         Closing="MainWindow_OnClosing">
-    <Grid>
-        
+    <Grid HorizontalAlignment="Stretch">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="1*"/>
+        </Grid.ColumnDefinitions>
+        <ContentControl Name="ContentControl"
+                        HorizontalAlignment="Stretch"
+                        VerticalAlignment="Stretch"
+                        Grid.Column="1" 
+                        Margin="20,20,20,20"/>
     </Grid>
 </Window>
